--- a/style.css
+++ b/style.css
@@ -1,56 +1,172 @@
-.cabeçalho{
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+
+body{
+    background-color: #afb3b7;
+}
+.cabeçalho {
     display: flex;
-  justify-content: space-between;
+    justify-content: space-between;
     height: 50px;
     font-size: 16px;
     font-weight: bold;
     color: black;
-    }
-    img{
-        display: flex;
-        justify-content: left;
-        height: 50px;
-        width: 50px;
-        border: 0px solid;
-        border-radius: 100px;
-    }
-    .conteudo{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 500px;
-    }
-    #foto2{
-        height: 250px;
-        width: 250px;
-        margin-top: 50px;
-        border-radius: 50%;
-    }
-
-    .rodape{
-        background-color: bisque;
-        display: flex;
-        justify-content: center;
-        height: 100px;
-        align-items: center;
-    }
     
-    #nav1 {
-        background-color: brown;
-        height: 500px;
-        width: 300px;
-        align-items: center;
-    }
-    #nav2{
-        background-color: mediumaquamarine;
-        height: 500px;
-        width: 300px;
-        align-items: center;
-    }
-    #nav3{
-        background-color: coral;
-        height: 500px;
-        width: 300px;
-        align-items: center;
-    }
+}
+
+img {
+    display: flex;
+    justify-content: left;
+    height: 50px;
+    width: 50px;
+    border: 0px solid;
+    border-radius: 100px;
+}
+
+.conteudo {
+    display: flex;
+    align-items: center;
+    height: 500px;
+}
+
+#foto2 {
+    height: 250px;
+    width: 250px;
+    margin-top: 50px;
+    border-radius: 50%;
+    padding-left: 15px;
+}
+#nav1 {
+    height: 500px;
+    width: 900px;
+    align-items: center;
+}
+
+#nav3 {
+    height: 500px;
+    width: 300px;
+    align-items: center;
+}
+
+#titulo {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    margin-top: 70px;
+    font-family: 'Young Serif', serif;
+}
+
+#subtitulo {
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+}
+
+#texto {
+    font-size: 20px;
+}
+#projetosb {
+    height: 600px;
+    background-color: blue;
+}
+
+#ferramentas {
+    height: 700px;
    
+}
+
+#titulof {
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    font-family: 'Young Serif', serif;
+}
+
+#textof {
+    display: flex;
+    justify-content: center;
+    padding-top: 0px;
+}
+
+#experiencia {
+    height: 600px;
+  
+}
+#tituloe{
+    display: flex;
+    justify-content: center;
+    padding-top: 150px;
+    font-family: 'Young Serif', serif;
+}
+#textoe{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    width: 1000px;
+    padding-top: 0px;
+    padding-left: 60px;
+}
+
+#linguagens {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 50px;
+}
+
+#front {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid;
+    height: 350px;
+    width: 300px;
+    padding-left: 30px;
+    transition: 0.7s;
+}
+
+#front:hover {
+    height: 375px;
+    width: 375px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+#html {
+    display: flex;
+}
+
+#css {
+    display: flex;
+}
+
+#js {
+    display: flex;
+}
+
+#dados{
+    display: flex;
+    justify-content: center;
+    border: 2px solid;
+    height: 350px;
+    width: 300px;
+    transition: 0.7s;
+}
+
+#dados:hover {
+    height: 375px;
+    width: 375px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+#back {
+    border: 2px solid;
+    height: 350px;
+    width: 300px;
+    transition: 0.7s;
+}
+#back:hover {
+    height: 375px;
+    width: 375px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+#contatob{
+    height: 600px;
+    background-color:navy;
+}
